# python-project-lvl3

./: Makefile  README.md  guides-hexlet-io-ru.html  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  loader.py  logging.py  parsing.py  resources.py  storage.py  url.py  urls.py
page_loader/scripts/: page_loader.py
tests/: test_loader.py  test_storage.py  test_url.py  utils.py
tests/fixtures/: page.html  page_after.html
tests/fixtures/page_sources/: application.css  runtime.js
