[tool.poetry]
name = "hexlet-code"
version = "0.6.3"
description = ""
authors = ["Vladislav Sviridov <v.sviridov.dev@gmail.com>"]

packages = [
  { include = "page_loader" }
]

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.page_loader:main'

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
urllib3 = "^1.26.9"
requests = "^2.27.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
coverage = "^6.3.2"
pytest = "^7.1.0"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
